objects/csfb__Conductor__c.object
<CustomObject>
    <fields>
        <fullName>csfb__Conductor_Environment__c</fullName>
        <description>ONLY USED BY CONGA SUPPORT

* Recommended to remove from page layout when not in use *</description>
        <label>Conga Batch Environment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>prod-</fullName>
                    <default>true</default>
                    <label>prod-</label>
                </value>
                <value>
                    <fullName>staging-</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>csfb__Consolidated_PDF_Output_File__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Combine PDFs into a single file when scheduling a consolidated Conga Batch routine and delivering to a Content Workspace.</inlineHelpText>
        <label>Consolidated PDF Output File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csfb__Content_Workspace_Id__c</fullName>
        <inlineHelpText>The ID of a Content Library where files from a scheduled Conga Batch process will be stored when the output mode is set to download.</inlineHelpText>
        <label>Content Workspace ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csfb__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csfb__Has_Query_Id__c</fullName>
        <formula>IF(  ISBLANK( csfb__Query_Id__c ) , 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Query ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>csfb__Has_Record_Id__c</fullName>
        <formula>IF(  ISBLANK( csfb__Record_Id__c ) , 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Record ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>csfb__Has_Report_Id__c</fullName>
        <formula>IF(  ISBLANK( csfb__Report_Id__c ) , 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Report ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>csfb__Next_Run_Date_Display__c</fullName>
        <formula>csfb__Next_Run_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Automatically populated by the Conga Batch schedule.</inlineHelpText>
        <label>Next Run Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>csfb__Next_Run_Date__c</fullName>
        <inlineHelpText>Determined by &quot;Schedule&quot; button.  Do not edit this field manually.</inlineHelpText>
        <label>Next Run Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>csfb__Query_Id__c</fullName>
        <inlineHelpText>The ID of a Conga Query record that returns the list of Master Object record IDs. Optionally, the query may include other fields.</inlineHelpText>
        <label>Query ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csfb__Record_Id__c</fullName>
        <inlineHelpText>An individual Salesforce record ID to use as a Master Object ID.</inlineHelpText>
        <label>Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csfb__Report_Id__c</fullName>
        <inlineHelpText>The ID of a Salesforce Report that contains the list of Master Object IDs. Optionally, the report may include other columns.</inlineHelpText>
        <label>Report ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csfb__Schedule_Description_Display__c</fullName>
        <formula>csfb__Schedule_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Automatically populated by the Conga Batch schedule.</inlineHelpText>
        <label>Schedule Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csfb__Schedule_Description__c</fullName>
        <inlineHelpText>Determined by &quot;Schedule&quot; button.  Do not edit this field manually.</inlineHelpText>
        <label>Schedule Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>csfb__Title__c</fullName>
        <label>Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csfb__URL_Field_Name__c</fullName>
        <inlineHelpText>The API name of the formula field that contains the converted Conga Composer button / link URL.</inlineHelpText>
        <label>URL Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csfb__Version__c</fullName>
        <description>Used to upgrade from prior versions of Conga Batch.

* Recommended to remove from page layout when not in use *</description>
        <label>Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C8</fullName>
                    <default>true</default>
                    <label>C8</label>
                </value>
                <value>
                    <fullName>C7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Conga Invoice Batch</label>
    <listViews>
        <fullName>csfb__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Conga Batch-{0000}</displayFormat>
        <label>Conga Batch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conga Invoice Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>csfb__Either_Report_or_Query_Id_must_be_suppli</fullName>
        <active>false</active>
        <errorConditionFormula>AND(  ISBLANK(csfb__Report_Id__c ), ISBLANK( csfb__Query_Id__c ), ISBLANK( csfb__Record_Id__c ))</errorConditionFormula>
        <errorDisplayField>csfb__Report_Id__c</errorDisplayField>
        <errorMessage>You must supply one of the following: a Report Id, a Query Id or a Record Id.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>csfb__Not_Both_a_Report_Id_and_a_Query_Id</fullName>
        <active>true</active>
        <errorConditionFormula>( csfb__Has_Query_Id__c +  csfb__Has_Record_Id__c +  csfb__Has_Report_Id__c ) &gt; 1</errorConditionFormula>
        <errorDisplayField>csfb__Report_Id__c</errorDisplayField>
        <errorMessage>You must supply *only one* of the following:  a Report Id, a Query Id or a Record Id.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>csfb__Query_Id_Length</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  csfb__Query_Id__c != &quot;&quot; ,

OR( LEN(  csfb__Query_Id__c  ) &gt; 18 ,
LEFT(  csfb__Query_Id__c , 1) != &quot;a&quot; ))</errorConditionFormula>
        <errorDisplayField>csfb__Query_Id__c</errorDisplayField>
        <errorMessage>The Query Id must be a 15- or 18-character Salesforce ID from a Conga Query</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>csfb__Record_Id_Length</fullName>
        <active>true</active>
        <errorConditionFormula>AND( csfb__Record_Id__c != &quot;&quot; ,

LEN( csfb__Record_Id__c ) &gt; 18)</errorConditionFormula>
        <errorDisplayField>csfb__Record_Id__c</errorDisplayField>
        <errorMessage>The Record Id must be a 15- or 18-character Salesforce ID</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>csfb__Report_Id_Length</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  csfb__Report_Id__c != &quot;&quot; ,

OR( LEN(  csfb__Report_Id__c  ) &gt; 18 ,
LEFT(  csfb__Report_Id__c , 3) != &quot;00O&quot; ))</errorConditionFormula>
        <errorDisplayField>csfb__Report_Id__c</errorDisplayField>
        <errorMessage>The Report Id must be a 15- or 18-character Salesforce ID from a Report</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>csfb__URL_Field_Name_Required</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK( csfb__URL_Field_Name__c )</errorConditionFormula>
        <errorDisplayField>csfb__URL_Field_Name__c</errorDisplayField>
        <errorMessage>You must supply the API Name of the field that contains the Composer URL</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>csfb__Workspace_Id_Length</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  csfb__Content_Workspace_Id__c  != &quot;&quot; ,

OR( LEN( csfb__Content_Workspace_Id__c ) &gt; 18 ,
LEFT( csfb__Content_Workspace_Id__c , 3) != &quot;058&quot; ))</errorConditionFormula>
        <errorDisplayField>csfb__Content_Workspace_Id__c</errorDisplayField>
        <errorMessage>The Workspace Id must be a 15- or 18-character Salesforce ID from a Content Worksapce.</errorMessage>
    </validationRules>
</CustomObject>